--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/theo-sim-dev/use-country"
   },
   "homepage": "https://github.com/theo-sim-dev/use-country",
+  "dependencies": {
+    "country-list-with-dial-code-and-flag": "^5.1.0"
+  },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
@@ -31,9 +34,8 @@
     "@eslint/js": "^9.24.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
-    "country-list-with-dial-code-and-flag": "^5.1.0",
     "eslint": "^9.24.0",
-    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
