--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "use-country",
-  "description": "React hook that retrieves user's country. Completely free for commercial use.",
+  "description": "Detect your visitor's country! A lightweight React hook that determines a country using the IP address.",
   "author": "Theo Sim",
   "version": "0.1.0",
   "license": "MIT",
@@ -44,15 +44,21 @@
     "typescript-eslint": "^8.29.1"
   },
   "keywords": [
-    "react",
-    "reactjs",
-    "react-hook",
-    "react-hooks",
-    "hook",
-    "hooks",
     "geolocation",
     "country",
     "geolocation-api",
+    "ip",
+    "ipaddress",
+    "ip-to-country",
+    "ip-to-location",
+    "ip-api",
+    "ip-geolocation",
+    "ip-geolocation-api",
+    "countries",
+    "country-list",
+    "country-list-api",
+    "country-list-with-dial-code-and-flag",
+    "country.is",
     "country-api",
     "location",
     "country-code",
@@ -60,10 +66,16 @@
     "country-flag",
     "country-dial-code",
     "country-list",
-    "country-is",
     "country-js",
-    "custom-hook",
     "use-country",
-    "use-country-hook"
+    "use-country-hook",
+    "react",
+    "reactjs",
+    "react-hook",
+    "react-hooks",
+    "hook",
+    "hooks",
+    "react-custom-hook",
+    "custom-hook"
   ]
 }
