--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "use-country",
   "description": "Detect your visitor's country! A lightweight React hook that determines a country using the IP address.",
   "author": "Theo Sim",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -44,38 +44,14 @@
     "typescript-eslint": "^8.29.1"
   },
   "keywords": [
+    "ip-to-country",
     "geolocation",
     "country",
-    "geolocation-api",
-    "ip",
-    "ipaddress",
-    "ip-to-country",
-    "ip-to-location",
-    "ip-api",
-    "ip-geolocation",
-    "ip-geolocation-api",
-    "countries",
-    "country-list",
-    "country-list-api",
-    "country-list-with-dial-code-and-flag",
     "country.is",
-    "country-api",
-    "location",
-    "country-code",
-    "country-name",
-    "country-flag",
-    "country-dial-code",
-    "country-list",
-    "country-js",
-    "use-country",
-    "use-country-hook",
+    "ipaddress",
     "react",
-    "reactjs",
     "react-hook",
-    "react-hooks",
-    "hook",
-    "hooks",
-    "react-custom-hook",
-    "custom-hook"
+    "custom-hook",
+    "country-api"
   ]
 }
