--- a/demo/package.json
+++ b/demo/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.1",
+    "country-list-with-dial-code-and-flag": "^5.1.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
