--- a/package.json
+++ b/package.json
@@ -20,10 +20,8 @@
     "url": "https://github.com/theo-sim-dev/use-country"
   },
   "homepage": "https://github.com/theo-sim-dev/use-country",
-  "dependencies": {
-    "country-list-with-dial-code-and-flag": "^5.1.0"
-  },
   "peerDependencies": {
+    "country-list-with-dial-code-and-flag": "^5.1.0",
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
     "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
   },
